@startuml

skinparam linetype ortho
hide circle
skinparam classAttributeIconSize 0
skinparam classBackgroundColor White
skinparam classBorderColor Black

class GraphBase {
    ~ generateChar(num: int, character: char): String
    ~ centerText(text: String, maxLength: int): String
}

class GraphPoints {
    + graphSessions(sessionList: ArrayList<TrainingSession>): void
    + graphExercisePoints(exercise: Exercise, sessionList: ArrayList<TrainingSession>): void
}

class GraphPerformance {
    + graphExercisePerformance(exercise: Exercise, sessionList: ArrayList<TrainingSession>): void
}

class GraphPerformanceTime {
    ~ graphExerciseTime(exercise: Exercise, sessionList: ArrayList<TrainingSession>): String
}

class GraphPerformanceRepsDistance {
    ~ graphExerciseRepsDistance(exercise: Exercise, sessionList: ArrayList<TrainingSession>): String
}

' Relationships
GraphBase <|-- GraphPoints
GraphBase <|-- GraphPerformance
GraphPerformance <|-- GraphPerformanceTime
GraphPerformance <|-- GraphPerformanceRepsDistance

@enduml
